--- a/3.html
+++ b/3.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="fi">
-<head><meta charset="utf-8"><title>Kahviseura</title></head>
-<body style="font-size:22px;text-align:center;padding-top:50px;">
-Klikkaa puhuaksesi
+<head>
+<meta charset="utf-8">
+<title>Valitse puhe</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+  body{font-family:system-ui,Arial;padding:28px;text-align:center}
+  h2{margin-bottom:18px}
+  button{display:block;width:100%;max-width:480px;margin:10px auto;padding:14px 16px;font-size:18px;border-radius:12px;border:1px solid #ddd}
+  .stop{background:#eee}
+</style>
+</head>
+<body>
+  <h2>Valitse puhe</h2>
+
+  <button onclick="speak(t1)">1) Päivän tervehdys</button>
+  <button onclick="speak(t2)">2) Motivoiva puhe</button>
+  <button onclick="speak(t3)">3) Rento kahviseura</button>
+  <button class="stop" onclick="speechSynthesis.cancel()">⏹ Stop</button>
+
 <script>
-const t="Hei. Istutaan minuutti. Kuuntele hetki, hengitä. Nyt ei ole kiire mihinkään.";
-document.body.onclick=()=>{let u=new SpeechSynthesisUtterance(t);u.lang="fi-FI";speechSynthesis.speak(u);}
+const t1 = "Tämä on päivän tervehdys. Ääni toimii, ja tämä on ensimmäinen versio.";
+const t2 = "Joskus kaikki ei mene suunnitelman mukaan. Silti sinä nouset aina lopulta.";
+const t3 = "Hei. Istutaan minuutti. Hengitä rauhassa. Nyt ei ole kiire mihinkään.";
+
+function preferFinnishVoice() {
+  const vs = speechSynthesis.getVoices();
+  // yritä löytää suomalainen miesääni
+  return vs.find(v => /fi/i.test(v.lang) && /male|mies|suomi/i.test(v.name)) ||
+         vs.find(v => /fi/i.test(v.lang)) || null;
+}
+
+function speak(text){
+  speechSynthesis.cancel();
+  const u = new SpeechSynthesisUtterance(text);
+  u.lang = "fi-FI";
+  const v = preferFinnishVoice();
+  if (v) u.voice = v;
+  speechSynthesis.speak(u);
+}
+if (speechSynthesis.onvoiceschanged !== undefined) {
+  speechSynthesis.onvoiceschanged = () => {}; // varmistaa voice-listan latauksen
+}
 </script>
 </body>
 </html>
