--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
 <title>Ääniystävä</title>
 <style>
 body{background:#fafafa;font-family:system-ui,Arial;padding:24px}
-h1{font-size:26px;margin-bottom:28px}
-button{width:100%;padding:18px;font-size:22px;margin-bottom:16px;border-radius:12px;border:1px solid #ccc;background:white}
+h1{font-size:26px;margin-bottom:28px;text-align:center}
+button{width:100%;padding:18px;font-size:20px;margin-bottom:16px;
+border-radius:12px;border:1px solid #ccc;background:white}
 </style>
 </head>
 <body>
 
-<h1>Valitse hahmo</h1>
+<h1>Ääniystävä</h1>
 
-<button onclick="location.href='aiti-hanhi.html'">Äiti-hanhi (60v)</button>
-<button onclick="location.href='aasi-pappa.html'">Aasi-pappa (70v)</button>
+<button onclick="location.href='aiti-hanhi.html'">Äiti-hanhi (yksin)</button>
+<button onclick="location.href='aasi-pappa.html'">Aasi-pappa (yksin)</button>
+<button onclick="location.href='kahvipoyta.html'">☕ Kahvipöytä (molemmat hahmot)</button>
 
 </body>
 </html>
